--- a/Project1/index.Rmd
+++ b/Project1/index.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(message = FALSE, echo = TRUE)
 <br>
 <br>
 
-## **My meme**
+## My meme
 
 As many of us are now working in a remote environment, I loved how much I can relate to the original meme I found!
 
@@ -31,7 +31,7 @@ As many of us are now working in a remote environment, I loved how much I can re
 <br>
 <br>
 
-## **My animated GIF**
+## My animated GIF
 
 While I was searching for some inspiration online, found a really cute GIF so decided to alter it slightly for my assignment!
 
@@ -67,10 +67,6 @@ h3, h4, p{
 
 h1{
   font-weight: bold;
-}
-
-h2{
-  font-weight: normal;
 }
 
 p{
